# NX-Mod-Manager

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  PLAN_REMOVE_LAST_MOD.md  PLAN_RESET_GAME.md  README.md  README_EN.md  STORE_GAME_ICON_CACHE_FOUNDATION_PLAN.md  STORE_GAME_ICON_CACHE_PLAN.md  plan.md
.github/: FUNDING.yml  hbappstore.json
.github/forReadme/: hbappstore.json
.github/workflows/: releasePush.yml  update_hbappstore.yml
assets/romfs/lang/: zh-Hant.json
code/include/activity/: addGameActivity.hpp  help.hpp  home.hpp  main_activity.hpp  modList.hpp  modManager.hpp  searchActivity.hpp  second_activity.hpp  storeGameList.hpp  storeModDetail.hpp  storeModList.hpp
code/include/api/: apiResult.hpp  app.hpp  comment.hpp  game.hpp  mod.hpp  url.hpp  utils.hpp
code/include/color/: color.hpp
code/include/common/: config.hpp  deviceInfo.hpp  gameInfo.hpp  modInfo.hpp  settings.hpp
code/include/core/: appUpdater.hpp  audio.hpp  device.hpp  downloadRecord.hpp  ftp.hpp  gameManager.hpp  gameNACP.hpp  homeBtnBlock.hpp  modFileRefCount.hpp  modGameType.hpp  modManager.hpp  mtp.hpp  storeGameIconCache.hpp  storeGameManager.hpp  storeModDetailManager.hpp  storeModLocalState.hpp  storeModManager.hpp
code/include/core/modInstaller/: dontStarve.hpp  dontStarveInstallMap.hpp  install.hpp  installDir.hpp  installZip.hpp  mhrise.hpp  mhriseInstallMap.hpp  specialRules.hpp  utils.hpp
code/include/core/modinstaller/: install.hpp  installDir.hpp  installZip.hpp  utils.hpp
code/include/dataSource/: commentListDS.hpp  gameCardDS.hpp  helpCardDS.hpp  installedGameDS.hpp  modCardDS.hpp  storeGameListDS.hpp  storeModListDS.hpp
code/include/scanner/: gameScanner.hpp  modScanner.hpp
code/include/theme/: theme.hpp
code/include/utils/: async.hpp  crc32.hpp  debug.hpp  deviceInfo.hpp  dialog.hpp  format.hpp  fsHelper.hpp  gameNACP.hpp  gameNacp.hpp  http.hpp  indexUpdate.hpp  jsonFile.hpp  jsonResp.hpp  keyboard.hpp  pageNav.hpp  pchtxtConverter.hpp  pinYinCvt.hpp  pinyinHelper.hpp  qrcode.hpp  searchEngine.hpp  strSort.hpp  textClean.hpp  threadPool.hpp  webpDecoder.hpp  zipReader.hpp
code/include/view/: actionMenu.hpp  actionMenuItem.hpp  addGameCard.hpp  capsuleBadge.hpp  circleButton.hpp  commentCard.hpp  customDialog.hpp  custom_applet_frame.hpp  ftpDialog.hpp  gameCard.hpp  gridPage.hpp  helpCard.hpp  imageViewer.hpp  keyboard.hpp  keyboardInput.hpp  longPressDialog.hpp  longTextBox.hpp  modCard.hpp  modDetail.hpp  modList.hpp  mtpDialog.hpp  myframe.hpp  progressDialog.hpp  qrCode.hpp  qrCodeView.hpp  recyclingGrid.hpp  scrollDialog.hpp  storeGameCard.hpp  storeModCard.hpp  svgImage.hpp
code/src/: main.cpp
code/src/activity/: addGameActivity.cpp  help.cpp  home.cpp  main_activity.cpp  modList.cpp  modManager.cpp  searchActivity.cpp  second_activity.cpp  storeGameList.cpp  storeModDetail.cpp  storeModList.cpp
code/src/api/: app.cpp  comment.cpp  game.cpp  mod.cpp  utils.cpp
code/src/core/: appUpdater.cpp  audio.cpp  device.cpp  downloadRecord.cpp  ftp.cpp  gameManager.cpp  gameNACP.cpp  modFileRefCount.cpp  modGameType.cpp  modManager.cpp  mtp.cpp  storeGameIconCache.cpp  storeGameManager.cpp  storeModDetailManager.cpp  storeModLocalState.cpp  storeModManager.cpp
code/src/core/modInstaller/: dontStarve.cpp  dontStarveInstallMap.cpp  install.cpp  installDir.cpp  installZip.cpp  mhrise.cpp  mhriseInstallMap.cpp  modFileRefCount.cpp  specialRules.cpp  utils.cpp
code/src/scanner/: gameScanner.cpp  modScanner.cpp
code/src/utils/: format.cpp  fsHelper.cpp  gameNACP.cpp  gameNacp.cpp  http.cpp  jsonFile.cpp  jsonResp.cpp  pageNav.cpp  pchtxtConverter.cpp  pinYinCvt.cpp  pinyinHelper.cpp  qrcode.cpp  searchEngine.cpp  zipReader.cpp
code/src/view/: actionMenu.cpp  actionMenuItem.cpp  addGameCard.cpp  capsuleBadge.cpp  circleButton.cpp  commentCard.cpp  customDialog.cpp  custom_applet_frame.cpp  ftpDialog.cpp  gameCard.cpp  gridPage.cpp  helpCard.cpp  imageViewer.cpp  keyboard.cpp  keyboardInput.cpp  longPressDialog.cpp  longTextBox.cpp  modCard.cpp  modDetail.cpp  modList.cpp  mtpDialog.cpp  myframe.cpp  progressDialog.cpp  qrCode.cpp  qrCodeView.cpp  recyclingGrid.cpp  scrollDialog.cpp  storeGameCard.cpp  storeModCard.cpp  svgImage.cpp
demo/include/tab/: settings_tab.hpp
patches/: borealis-latin-font.patch
resources/i18n/en-US/: addGameActivity.json  help.json  home.json  main.json  modList.json  other.json  search.json  storeGameList.json  storeModDetail.json  storeModList.json  views.json
resources/i18n/pt-BR/: addGameActivity.json  help.json  home.json  modList.json  other.json  search.json  storeGameList.json  storeModDetail.json  storeModList.json  views.json
resources/i18n/zh-Hans/: addGameActivity.json  help.json  hints.json  home.json  main.json  modList.json  other.json  search.json  storeGameList.json  storeModDetail.json  storeModList.json  views.json
resources/i18n/zh-Hant/: addGameActivity.json  help.json  home.json  main.json  modList.json  other.json  search.json  storeGameList.json  storeModDetail.json  storeModList.json  views.json
resources/xml/activity/: addGameActivity.xml  help.xml  home.xml  main.xml  modList.xml  modManager.xml  searchActivity.xml  second.xml  storeGameList.xml  storeModDetail.xml  storeModList.xml
resources/xml/tabs/: settings.xml
resources/xml/theme/: colors.xml  theme.xml
resources/xml/view/: actionMenu.xml  actionMenuItem.xml  addGameCard.xml  commentCard.xml  customDialog.xml  gameCard.xml  gridPage.xml  helpCard.xml  imageViewer.xml  keyboardInput.xml  longPressDialog.xml  modCard.xml  modDetail.xml  modList.xml  myframe.xml  progressDialog.xml  qrCodeView.xml  scrollDialog.xml  storeGameCard.xml  storeModCard.xml
src/: app.cpp
